Adding Graph Algorithms starting with Breadth First Search

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-Algorithms/Sort Algorithms/test.js
-Algorithms/Sort Algorithms/Bucket_Sort.js
+Algorithms/Sorting_Algorithms/test.js
+Algorithms/Sorting_Algorithms/Bucket_Sort.js
 *.exe
